# RM-YOLOv8-pose-Openvino

./: CMakeLists.txt  README.md  detector.cpp  detector.h  main.cpp
